# Variational-Doob

./: .gitignore  LICENSE  README.md  environment.yml  evaluate_mueller.py  gaussian_mixture.py  main.py  main_md.py  main_md_2nd_mixture.py  mueller.py  potentials.py  prepare_molecule.py  pyproject.toml  requirements.txt  systems.py  test_euler_step_openmm.py  test_langevin_step_openmm.py  tps.py  tps_baseline.py  tps_baseline_mueller.py  tps_gaussian.ipynb  tps_gaussian_2nd.ipynb  tps_second_order.py
configs/: aldp_diagonal_single_gaussian.yaml  aldp_diagonal_single_gaussian_internal.yaml  aldp_diagonal_two_gaussian.yml  aldp_diagonal_two_gaussian_internal.yml  chignolin_diagonal_single_gaussian.yaml
configs/toy/: double_well.yaml  double_well_hard.yaml  dual_channel_single_gaussian.yaml  dual_channel_two_gaussians.yaml  mueller_second_single_gaussian.yaml  mueller_single_gaussian.yaml  mueller_single_gaussian_full_rank.yaml  mueller_single_gaussian_full_rank_spline.yaml  mueller_single_gaussian_low_rank.yaml  mueller_single_gaussian_low_rank_spline.yaml
eval/: evaluate_mueller.py  evaluate_tps.py  evaluate_wasserstein.py  path_metrics.py
model/: __init__.py  diagonal.py  qsetup.py  setup.py  train.py  utils.py
notebooks/: animations.ipynb  models.py  tps_gaussian.ipynb  vf.py
tps/: first_order.py  paths.py  plot.py  second_order.py
training/: diagonal.py  qsetup.py  train.py  utils.py
training/setups/: diagonal.py  drift.py  full.py  lowrank.py
utils/: PlotPathsAlanine.py  PlotPathsAlanine_jax.py  aldp.py  angles.py  animation.py  args.py  internal.py  pdb.py  plot.py  rmsd.py  splines.py  toy_plot_helpers.py
