[project]
name = "Variational-Doob"
description = " Lagrangian formulation of Doob's h-transform allowing for an efficient rare event sampling ."
readme = "README.md"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "openmm==8.1.1",
    "mdtraj==1.10.0",
    "tqdm>=4.66.5",
    "matplotlib>=3.9.2",
    "scipy==1.12.0",
    "scikit-image>=0.24.0",
    "openpathsampling>=1.6.1",
    "jax==0.4.23; platform_system == 'Darwin'",
    "jax[cuda12]==0.4.23; platform_system != 'Darwin'",
    "jaxlib==0.4.23",
    "flax==0.8.3",
    "notebook>=7.2.2",
    "pot>=0.9.4",
    "dmff",
    "rdkit==2024.3.5",
    "ParmEd==4.2.2",
]

[tool.uv.sources]
dmff = { git = "https://github.com/deepmodeling/DMFF", tag = "v1.0.0" }

