[project]
name = "Variational-Doob"
description = " Lagrangian formulation of Doob's h-transform allowing for an efficient rare event sampling ."
readme = "README.md"
version = "1.0.0"
requires-python = "==3.11"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.dependencies]
openmm = "==8.1.1"
mdtraj = "==1.10.0"
tqdm = ">=4.67.0,<5"
scipy = "==1.12.0"
scikit-image = ">=0.24.0,<0.25"
openpathsampling = ">=1.7.0,<2"
notebook = ">=7.2.2,<8"
pot = ">=0.9.5,<0.10"
rdkit = "==2024.3.5"
parmed = "==4.2.2"

[tool.pixi.pypi-dependencies]
jax = "==0.5.3"
flax = ">=0.8.3"
dmff = { git = "https://github.com/plainerman/DMFF" }

[tool.pixi.target.linux-64.pypi-dependencies]
jax = { version = "==0.5.3", extras = ["cuda12"] }
